force-app/main/default/objects/cgcloud__Org_Unit__c/cgcloud__Org_Unit__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the organization unit object, defining a manufacturer´s organizational structure.</description>
    <label>Org Unit</label>
    <nameField>
        <label>Org Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>