force-app/main/default/objects/cgcloud__Org_Unit__c/fields/cgcloud__Description_Language_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description_Language_1__c</fullName>
    <description>Holds Description for language 1.</description>
    <label>Description Language 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>