force-app/main/default/objects/cgcloud__Org_Unit__c/fields/cgcloud__Description_Language_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description_Language_3__c</fullName>
    <description>Holds Description for language 3.</description>
    <label>Description Language 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>