force-app/main/default/objects/cgcloud__Org_Unit__c/fields/cgcloud__Org_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Org_Level__c</fullName>
    <description>Level of an organization unit regarding a organization type.</description>
    <label>Org Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>SalesOrganization</fullName>
            </value>
            <value>
                <fullName>SalesOffice</fullName>
            </value>
            <value>
                <fullName>SalesRep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>