force-app/main/default/objects/cgcloud__Org_Unit__c/fields/cgcloud__Org_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Org_Type__c</fullName>
    <description>Type of a organization unit.</description>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>